Complete Java 21 migration: compiler settings, Takari removal, checkstyle fixes
- Set explicit Java 21 source/target/release in pom.xml
- Replace deprecated new Integer() with Integer.valueOf() in test files (36 occurrences)
- Remove unused Spring Framework dependency (spring.version property)
- Replace Takari lifecycle plugin with standard maven-compiler-plugin
- Change packaging from takari-jar to jar
- Remove walmartlabs-pom parent POM dependency
- Remove --add-opens compiler arg workaround
- Fix all 150 JavadocMethod checkstyle violations (missing @param, @return tags)
- Fix AtclauseOrder violations (tag ordering)
- Fix RightCurly violations in DefaultDex894Parser (do-while formatting)
- Fix CustomImportOrder violation in SegmentIteratorTest
- Fix malformed @throws javadoc tags in SourceToSegmentUtil and X12Parser
- Re-enable checkstyle.fail.on.violation=true (0 violations)
- All 412 tests pass, JAR packaging verified

Co-Authored-By: rmillard07 <rmillard07@gmail.com>